[CHANGED] Removed page and trying

--- a/assets/templates/layouts/main.handlebars
+++ b/assets/templates/layouts/main.handlebars
@@ -11,7 +11,7 @@
       </div>
     </paper-toolbar>
     <div id="page-content" style="height: 2000px">
-      {{page data.page}}
+      <!-- {{page data.page}} -->
     </div>
   </paper-scroll-header-panel>
 </paper-drawer-panel>
