[CHANGED] only import polymer

--- a/assets/templates/layouts/main.handlebars
+++ b/assets/templates/layouts/main.handlebars
@@ -1,4 +1,4 @@
-<paper-drawer-panel force-narrow drawer-width='320px'>
+<!-- <paper-drawer-panel force-narrow drawer-width='320px'>
   <div drawer>
     <div> Test </div>
   </div>
@@ -14,4 +14,4 @@
       {{page data.page}}
     </div>
   </paper-scroll-header-panel>
-</paper-drawer-panel>
+</paper-drawer-panel> -->
