--- a/views/index.jade
+++ b/views/index.jade
@@ -83,23 +83,23 @@ html
     
     // WEB COMPONENTS
     link(rel="import", href="/vendor/polymer/polymer.html")
-    link(rel="import", href="/vendor/iron-icon/iron-icon.html")
-    link(rel="import", href="/vendor/iron-icons/communication-icons.html")
-    link(rel="import", href="/vendor/iron-icons/device-icons.html")
-    link(rel="import", href="/vendor/iron-icons/editor-icons.html")
-    link(rel="import", href="/vendor/iron-icons/hardware-icons.html")
-    link(rel="import", href="/vendor/iron-icons/image-icons.html")
-    link(rel="import", href="/vendor/iron-icons/iron-icons.html")
-    link(rel="import", href="/vendor/iron-icons/maps-icons.html")
-    link(rel="import", href="/vendor/iron-icons/notification-icons.html")
-    link(rel="import", href="/vendor/iron-icons/places-icons.html")
-    link(rel="import", href="/vendor/iron-icons/social-icons.html")
-    link(rel="import", href="/vendor/iron-flex-layout/iron-flex-layout.html")
-    link(rel="import", href="/vendor/iron-flex-layout/iron-flex-layout-classes.html")
+    //- link(rel="import", href="/vendor/iron-icon/iron-icon.html")
+    //- link(rel="import", href="/vendor/iron-icons/communication-icons.html")
+    //- link(rel="import", href="/vendor/iron-icons/device-icons.html")
+    //- link(rel="import", href="/vendor/iron-icons/editor-icons.html")
+    //- link(rel="import", href="/vendor/iron-icons/hardware-icons.html")
+    //- link(rel="import", href="/vendor/iron-icons/image-icons.html")
+    //- link(rel="import", href="/vendor/iron-icons/iron-icons.html")
+    //- link(rel="import", href="/vendor/iron-icons/maps-icons.html")
+    //- link(rel="import", href="/vendor/iron-icons/notification-icons.html")
+    //- link(rel="import", href="/vendor/iron-icons/places-icons.html")
+    //- link(rel="import", href="/vendor/iron-icons/social-icons.html")
+    //- link(rel="import", href="/vendor/iron-flex-layout/iron-flex-layout.html")
+    //- link(rel="import", href="/vendor/iron-flex-layout/iron-flex-layout-classes.html")
     // WEB COMPONENTS END
   body
     #main-content(page-name='#{page}',style='height: 100%')
     
     script.
-      App.setPage();
+      //- App.setPage();
       
