[ADDED] Paper slider

--- a/assets/templates/pages/misc.handlebars
+++ b/assets/templates/pages/misc.handlebars
@@ -13,7 +13,13 @@
   </div>
 </div>
 <div class='mdl-grid'>
-  <div class='mdl-cell mdl-cell--1-col'>
-
+  <div class='mdl-cell mdl-cell--3-col'>
+    {{view 'components/general/slider' data=components.slider}}
+  </div>
+  <div class='mdl-cell mdl-cell--3-col'>
+    {{view 'components/general/slider' data=components.pin}}
+  </div>
+  <div class='mdl-cell mdl-cell--3-col'>
+    {{view 'components/general/slider' data=components.markers}}
   </div>
 </div>
