--- a/views/404.jade
+++ b/views/404.jade
@@ -7,6 +7,7 @@ html
     link(rel="stylesheet", href="/styles/components/button/icon.css")
     link(rel="stylesheet", href="/styles/components/card/main.css")
     link(rel="stylesheet", href="/styles/components/general.css")
+    link(rel="stylesheet", href="/styles/components/general/slider.css")
     link(rel="stylesheet", href="/styles/importer.css")
     // STYLES END
 
