--- a/views/index.jade
+++ b/views/index.jade
@@ -64,6 +64,7 @@ html
     script(src="/js/application/components/general/menu.js")
     script(src="/js/application/components/general/selection.js")
     script(src="/js/application/components/general/slider.js")
+    script(src="/js/application/components/general/spinner.js")
     script(src="/js/application/components/text/area.js")
     script(src="/js/application/components/text/input.js")
     script(src="/js/application/components/toggles/checkbox.js")
