[ADDED] Buttons to test toast

--- a/assets/templates/pages/misc.handlebars
+++ b/assets/templates/pages/misc.handlebars
@@ -44,3 +44,33 @@
     </div>
   </div>
 </div>
+<div class='mdl-grid'>
+  <div class='mdl-cell mdl-cell--8-col'>
+    <div class='mdl-grid'>
+      <div class='mdl-cell mdl-cell--12-col'>
+        <h4>
+          Toast
+        </h4>
+      </div>
+    </div>
+    <div class='mdl-grid'>
+      <div class='mdl-cell mdl-cell--1-col'>
+        {{view 'components/button/main' data=components.toast}}
+      </div>
+      <div class='mdl-cell mdl-cell--1-col'>
+        {{view 'components/button/main' data=components.long_toast}}
+      </div>
+      <div class='mdl-cell mdl-cell--1-col'>
+        {{view 'components/button/main' data=components.success_toast}}
+      </div>
+      <div class='mdl-cell mdl-cell--1-col'>
+        {{view 'components/button/main' data=components.error_toast}}
+      </div>
+      <div class='mdl-cell mdl-cell--2-col'>
+        {{view 'components/button/main' data=components.persistent_toast}}
+      </div>
+      <div class='mdl-cell mdl-cell--1-col'>
+        {{view 'components/button/main' data=components.full_toast}}
+      </div>
+    </div>
+  </div>
