[CHANGED] layout of scss. Color themes. text input color

--- a/assets/styles/application.scss
+++ b/assets/styles/application.scss
@@ -1,5 +1,12 @@
-$primary: rgb(96,125,139);
-$accent: rgb(255,171,64);
+@import "theme";
+
+// TEXT CONTROL
+.text-white {
+  color: white;
+}
+.text-black {
+  color: black;
+}
 
 body {
   height: 100%;
@@ -19,26 +26,23 @@ body {
         }
       }
       #headerBg.paper-scroll-header-panel {
-        background: linear-gradient(rgba(96,125,139,0.6), rgba(96,125,139,0.6)), url('../images/oldchicagomid.jpg');
+        background: linear-gradient(rgba($primary,0.6), rgba($primary,0.6)), url('../images/oldchicagomid.jpg');
         background-position: center bottom !important;
       }
       #condensedHeaderBg.paper-scroll-header-panel {
-        background: rgb(96,125,139);
+        background: $primary;
       }
     }
   }
 
-  paper-toast {
-    paper-button.toast_button {
-      color: $accent;
-      text-transform: none;
+  paper-card.home-card {
+    div.header.paper-card {
+      height: 200px;
     }
-    &.success {
-      background-color: rgb(76, 175, 80);
-    }
-    &.error {
-      background-color: rgb(244, 67, 54);
-    }
+  }
+
+  .blue_grey {
+    background: $paper-blue-grey-500 !important;
   }
 
   paper-spinner.cjd-spinner {
