--- a/views/index.jade
+++ b/views/index.jade
@@ -4,11 +4,15 @@ html
     link(rel="stylesheet", href="https://code.getmdl.io/1.1.2/material.blue_grey-orange.min.css")
     // STYLES
     link(rel="stylesheet", href="/styles/application.css")
+    link(rel="stylesheet", href="/styles/colors.css")
     link(rel="stylesheet", href="/styles/components/button/icon.css")
     link(rel="stylesheet", href="/styles/components/card/main.css")
     link(rel="stylesheet", href="/styles/components/general.css")
     link(rel="stylesheet", href="/styles/components/general/slider.css")
+    link(rel="stylesheet", href="/styles/components/text/main.css")
+    link(rel="stylesheet", href="/styles/components/toast/main.css")
     link(rel="stylesheet", href="/styles/importer.css")
+    link(rel="stylesheet", href="/styles/theme.css")
     // STYLES END
 
     // DEPENDENCIES
